
- Use dropdown widget with available tasks in the cron job
  adding form, instead of text input.

- Remove dependency on zope.app.zapi by using its wrapped api directly.

- Use ISite from zope.location instead of zope.app.component

- Use zc.queue.Queue instead of zc.queue.PersistentQueue because
  PersistentQueue is only to be used by the CompositeQueue.

- Changed URL to pypi.


2008/11/07 0.2.15a1:
====================

- running could cause an AttributeError. added handling for it

2008/02/08 0.2.14:
==================

- commiting after each 100 jobs during 'clearAll' to avoid browser timeouts
  while canceling a huge amount of jobs


2008/01/28 (new):
=================

- Some bugs smashed, improved tests.

- Added ``startLater`` to ``TaskService.add``. See startlater.txt for more info.
  This facilitates to separate jobb add and start timepoints. (Not cron-like)


2007/12/?? (new):
=================

- Switched index to Zope 3.4 KGS, so that we agree on used package versions.

- Made the sleep time of the processor variable; this is needed for testing,
  so that the testing framework is not faster than the processor shutting
  down.

- Added a small optimization to ``isProcessing()`` to stop looking through the
  threads once one with the correct name has been found.


2007/11/12 0.2.13:
==================

- added "cancel all" button
- fixed bug in associating threads with task service instances


2007/10/28 0.2.12:
==================

- make the startup more robust
  If an already registered task service is remove via ZMI it's registration is
  not removed. If this happens zope can no longer be restarted if autostart is
  used.


2007/10/28 0.2.11:
==================

- allow '*' to select all possible times in the cron job add/edit forms

- allow to cancel a delayed job


2007/10/24 0.2.10:
==================

- avoided deprecation warnings


2007/10/08 0.2.9:
=================

- don't push a cron job back into the queue if it's status is ERROR

